--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -45,18 +45,19 @@
   }
   
 .modal-dialog {
-  max-width: 900px; 
-  border-radius: 10px;
+  max-width: 950px;   
 }
 
 .modal-content {
   border: none;
   position: relative;
-  padding: 0 !important;
+  padding: 0;
   font-size: 14px;
+  border-radius: 20px !important;
   -webkit-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
-  box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24); }
+  box-shadow: 0px 50px 60px -20px rgba(0, 0, 0, 0.24); 
+}
   .modal-content .modal-header {
     padding: 0;
     border: none; 
@@ -67,12 +68,13 @@
     right: 0;
     padding: 0;
     margin: 0;
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     z-index: 1;
     text-shadow: none;
     background: rgba(0, 0, 0, 0.1);
-    color: #fff; }
+    color: #fff;  
+  }
   .modal-content .modal-body {
     border: none;
     position: relative;
@@ -99,14 +101,8 @@
       color: #5eb7b7; }  
   .modal-content .btn-primary {
     background: #1269DB!important;
-    height: 52px !important; }
-    .no-gutters {
-      margin-right: 0;
-      margin-left: 0; }
-      .no-gutters > .col,
-      .no-gutters > [class*="col-"] {
-        padding-right: 0;
-        padding-left: 0; }
+    height: 52px !important; 
+  }
 .modal-content .label {
     text-transform: uppercase;
     font-size: 12px;
