add image and change color

--- a/assets/css/atlantis.css
+++ b/assets/css/atlantis.css
@@ -1394,7 +1394,7 @@ body {
   background: #5C55BF !important; }
 
 .navbar-header[data-background-color="purple"] {
-  background: #6861CE !important; }
+  background: #31376E  !important; }
 
 .navbar-header[data-background-color="purple2"] {
   background: #5C55BF !important; }
