new-commit until data tes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,136 +1,7 @@
-#tabs{
-    margin-top: -20px;
-  }
-  .project-tab #tabs{
-    background: #007b5e;
-    color: #eee;
-  }
-  .project-tab #tabs h6.section-title{
-    color: #eee;
-  }
-  .project-tab #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    color: #1269DB;
-    background-color: transparent;
-    border-color: transparent transparent #f3f3f3;
-    border-bottom: 3px solid !important;
-    font-weight: 900;
-  }
-  .project-tab #tabs .nav-tabs{
-    font-family: 'Roboto',sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 16px;
-    line-height: 24px;
-  }
-  .project-tab .nav-link {
-    border: 1px solid transparent;
-    border-top-left-radius: .25rem;
-    border-top-right-radius: .25rem;
-    color: #7e7a7a;
-    font-family: 'Poppins',sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 24px;
-  }
-  .project-tab .nav-link:hover {
-    border: none;
-  }
-  .project-tab thead{
-    color: rgb(119, 115, 115);
-  }
-  .project-tab a{
-    text-decoration: none;
-    color: #333;
-    font-weight: 600;
-  }
-  
-.modal-dialog {
-  max-width: 950px;   
+.icon i{
+  transition: 0.8s all;
+  margin-right:4px;
 }
-
-.modal-content {
-  border: none;
-  position: relative;
-  padding: 0;
-  font-size: 14px;
-  border-radius: 20px !important;
-  -webkit-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
-  box-shadow: 0px 50px 60px -20px rgba(0, 0, 0, 0.24); 
+.icon:hover i{
+  transform: scale(1.4);
 }
-  .modal-content .modal-header {
-    padding: 0;
-    border: none; 
-  }
-  .modal-content button.close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 0;
-    margin: 0;
-    width: 60px;
-    height: 60px;
-    z-index: 1;
-    text-shadow: none;
-    background: rgba(0, 0, 0, 0.1);
-    color: #fff;  
-  }
-  .modal-content .modal-body {
-    border: none;
-    position: relative;
-    z-index: 0;
-    color: rgba(255, 255, 255, 0.8)!important; 
-  }
-  .modal-content .modal-body.color-1 {
-      background: #5eb7b7; 
-}
-    .modal-content .modal-body.color-2 {
-      background: #1b2a49; }
-    .modal-content .modal-body .icon span {
-      font-size: 10vw;
-      line-height: 1; }
-      @media (max-width: 767.98px) {
-        .modal-content .modal-body .icon span {
-          font-size: 100px; } }
-    .modal-content .modal-body .icon-2 {
-      position: absolute;
-      top: 0;
-      left: 20px;
-      font-size: 30px; }
-    .modal-content .modal-body a:hover {
-      color: #5eb7b7; }  
-  .modal-content .btn-primary {
-    background: #1269DB!important;
-    height: 52px !important; 
-  }
-.modal-content .label {
-    text-transform: uppercase;
-    font-size: 12px;
-    letter-spacing: 1px;
-    color:#fff;
-}
-.label {
-  display: inline-block;
-  margin-bottom: 0.5rem;
-  color: rgba(255, 255, 255, 0.8)!important;
-}
-.w-100 {
-  width: 100% !important;
-}
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: rgba(255, 255, 255, 0.8)!important;
-  font-size: 16px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-.bottom-left {
-  position: absolute;
-  bottom: 8px;
-  left: 5px;
-  opacity:50%;
-}
-    
